<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#bb333333">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/material_blue_500">

        <TextView
            android:contentDescription="@string/openApp"
            android:id="@+id/openAppButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin" />

        <ImageButton
            android:contentDescription="@string/refresh"
            android:id="@+id/refresh"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_sync_white_24dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:id="@+id/textView"
        android:text="@string/no_items"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"/>


</LinearLayout>