<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detail_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chart_text"
                android:textAllCaps="true" />

            <Spinner
                android:id="@+id/spinner_range"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/change_range" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#424242"
        android:clipToPadding="false"
        android:elevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <TextView
                android:id="@+id/stock_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="200dp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:text="@string/name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10000$"
                android:id="@+id/money"/>
</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/stock_symbol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    tools:text="@string/symbol" />

                <TextView
                    android:id="@+id/stock_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    tools:text="@string/price" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/stock_change"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    tools:text="@string/change" />

                <TextView
                    android:id="@+id/stock_change_perc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    tools:text="@string/change_perc" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/share_bought"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:hint="Enter no. of shares"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    />

                <Button
                    android:id="@+id/purchase_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="BUY" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/share_sold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:hint="Enter no. of shares"
                    android:inputType="number"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    />

                <Button
                    android:id="@+id/sell_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:text="SELL" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>